syntax = "proto3";

package stats_daemon_v1;

option go_package = "github.com/olezhek28/system-stats-daemon/pkg/stats_daemon_v1;stats_daemon_v1";

import "google/protobuf/empty.proto";


service StatsDaemonV1 {
  // Возвращает срез статистики за определенный период
  rpc GetStats (google.protobuf.Empty) returns (GetStatsResponse);
}

message GetStatsResponse {
  int64 value = 1;
}